# practices-in-Rust

./: add_until  add_until.rs  exercise_8  exercise_8.rs  fizzbuzz  fizzbuzz.rs  generic_list_max.rs  hashmap_test  hashmap_test.rs  list_max  list_max.rs  make_panic  make_panic.rs  rect  result  string_str  struct_example  struct_example.rs  struct_sample  struct_sample.rs  trait_sample  trait_sample.rs  transpose  transpose.rs  update_old_hash_val  vec  vec.rs
actix-todo/: Cargo.toml  Dockerfile  todo.db
actix-todo/src/: main.rs
actix-todo/templates/: index.html
axum-example/: Cargo.toml
axum-example/src/: main.rs
axum-todo/src/: main.rs
bookos/.cargo/: config
bookos/src/: main.rs
exercise/src/: main.rs
guessing_game/src/: main.rs
hello-wasm/: Cargo.toml
input/: Cargo.toml
minigrep/src/: lib.rs  main.rs
my-todo/src/: main.rs
nannou-experiment/animation/: Cargo.toml
nannou-experiment/animation/src/: main.rs
nannou-experiment/example/: Cargo.toml
nannou-experiment/example/src/: main.rs
nannou-experiment/experiment01/: Cargo.toml
nannou-experiment/sinewave/: Cargo.toml
projects/loops/: iter.rs
projects/loops/src/: main.rs
rectangles/src/: main.rs
rust-by-example/hello-world/: main  main.rs  pi
rustwi/: Cargo.toml
rustwi/src/: database.rs  hoge.rs  lib.rs  main.rs
rustwi/templates/: base.html  hoge.html
samplecli/src/: main.rs
std-input/: Cargo.toml
std-input/src/: main.rs
tetrust/src/: main.rs
trait-trpl/: Cargo.toml
trait-trpl/src/: main.rs
ui_demo/: Cargo.toml
ui_demo/src/: main.rs
yew-app/: Cargo.toml
(+6 files in other folders)
